--- a/app.json
+++ b/app.json
@@ -21,6 +21,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.acmesa.admin",
+      "versionCode": 1
     }
   }
 }
